--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,19 +1,25 @@
 .header {
   background: #000;
   color: #fff;
-  width: 100vw;
+  width: 100%;
   display: flex;
-  &:nth-last-child(0) {
-    margin-right: 0;
-  }
+  justify-content: space-between;
+  align-items: center;
   .link {
-    width: 83px;
     height: 27px;
     font-weight: bold;
     font-size: 24px;
     line-height: 32px;
     color: #ffffff;
-    margin-right: 36px;
     white-space: nowrap;
+
+    
+  }
+  .button{
+      padding: 13px;
+      border-radius: 20px;
+      text-transform: uppercase;
+      background: linear-gradient(90deg, #ff00e5 0%, #7000ff 100%);
+      color:#fff;
   }
 }
