--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
-  font-family: Galano Grotesque DEMO, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: Outfit, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;;
   -webkit-font-smoothing: antialiased;
@@ -10,4 +14,5 @@ body {
 * {
   margin: 0;
   padding: 0;
+  color: white;
 }
