--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -1,5 +1,5 @@
 .container {
-  padding: 0 50px;
-  width: 100%;
-  box-sizing: border-box;
+  margin: 0 auto;
+  width: 1200px;
+  padding: 0 33px;
 }
