--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,3 +1,9 @@
 .layout {
   background-color: #000;
+
+  .content {
+    width: 100%;
+    background: url('../../../public/images/Bg_blur.png') repeat-y;
+    background-size: cover;
+  }
 }
