--- a/src/pages/Contacts/Contacts.module.scss
+++ b/src/pages/Contacts/Contacts.module.scss
@@ -1,16 +1,19 @@
+@import "../../styles/variables.scss";
 .container {
   max-width: 938px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 140px auto;
+  padding: 140px 0;
   .heading {
     font-weight: 800;
     font-size: 60px;
     line-height: 76px;
     margin-bottom: 40px;
   }
-
+  .textFieldContainer {
+    width: 30%;
+  }
   .textFields {
     display: flex;
     width: 100%;
@@ -18,19 +21,69 @@
     margin-bottom: 40px;
 
     .textField {
-      border: white;
-      color: white
+      background-color: #c6c6c656;
+      width: 100%;
     }
+  }
+
+  .fieldLabel {
+    margin-bottom: 20px;
   }
 
   .textArea {
     width: 100%;
     margin-bottom: 40px;
+    background-color: #c6c6c656;
   }
 
   .sendButton {
+    cursor: pointer;
+    margin: 0 auto;
+    font-weight: 900;
+    font-size: 18px;
+    line-height: 24px;
+    box-sizing: border-box;
+    border: 2px solid transparent;
+    color: #fff;
+    padding: 20px 60px;
     border-radius: 122px;
-    padding: 12px 20px;
+    z-index: 1;
+    overflow: hidden;
+    background: transparent;
+    position: relative;
+    box-shadow: inset 0px 0px 0px 2px #ff00e5;
 
+    &:before {
+      content: "";
+      position: absolute;
+      left: 0%;
+      right: 0%;
+      top: 57.38%;
+      bottom: 0%;
+      background: $gradient90deg;
+      filter: blur(50px);
+      z-index: -1;
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      border-radius: 1px;
+      top: 0;
+      left: 0;
+
+      height: 100%;
+      width: 100%;
+      background: $gradient90deg;
+      z-index: -1;
+      opacity: 0;
+
+      transition: all 0.5s ease-out;
+    }
+
+    &:hover::after {
+      opacity: 100;
+
+      transition: all 0.5s ease-out;
+    }
   }
 }
