--- a/src/components/Benefits/Benefits.module.scss
+++ b/src/components/Benefits/Benefits.module.scss
@@ -7,13 +7,13 @@
     justify-content: center;
     align-items: center;
     .topBenefits {
-      @include gradientText90deg;
+      color:#fff;
       font-style: bold;
       font-size: 64px;
       line-height: 100%;
       padding-top: 169px;
-      text-transform: uppercase;
       display: inline-block;
+      margin-bottom: 43px;
     }
   }
 }
@@ -26,17 +26,18 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    margin-bottom: 81px;
     .textBenefits {
       color: #fff;
-      font-size: 36px;
+      font-size: 24px;
       text-align: left;
       font-weight: bold;
-      padding: 81px;
+      padding-right: 40px;
     }
     .imgBenefits {
       width: 60px;
       height: 60px;
-      padding: 40px;
+      padding-bottom: 40px;
     }
   }
 }
