--- a/src/pages/FAQ/FAQ.module.scss
+++ b/src/pages/FAQ/FAQ.module.scss
@@ -3,7 +3,7 @@
 
 .page {
   padding-bottom: 25px;
-  margin: 140px auto;
+  padding: 140px 0;
 
   .heading {
     font-weight: 800;
@@ -16,7 +16,7 @@
     position: relative;
 
     .stickyBar {
-      top: 20px;
+      top: 45px;
       right: 0;
       float: right;
       margin-left: auto;
