updated footer and header

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -35,6 +35,13 @@
 
     .icons {
       padding-top: 40px;
+      display: flex;
+      width: 50%;
+      justify-content: space-between;
+
+      .icon {
+        height: 16px;
+      }
     }
   }
   .linkBlock {
