--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -2,6 +2,7 @@
   background-color: #000;
 
   .content {
+    padding: 120px 0;
     width: 100%;
     background: url('../../../public/images/Bg_blur.png') repeat-y;
     background-size: cover;
