--- a/src/pages/Contacts/Contacts.module.scss
+++ b/src/pages/Contacts/Contacts.module.scss
@@ -1,6 +1,7 @@
 @import "../../styles/variables.scss";
 .container {
   max-width: 938px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
