--- a/src/pages/Contacts/Contacts.module.scss
+++ b/src/pages/Contacts/Contacts.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables.scss";
+
 .container {
   max-width: 938px;
   width: 100%;
@@ -36,54 +37,51 @@
     background-color: #c6c6c656;
   }
 
-  .sendButton {
-    cursor: pointer;
-    margin: 0 auto;
-    font-weight: 900;
-    font-size: 18px;
-    line-height: 24px;
-    box-sizing: border-box;
-    border: 2px solid transparent;
-    color: #fff;
-    padding: 20px 60px;
-    border-radius: 122px;
-    z-index: 1;
-    overflow: hidden;
-    background: transparent;
-    position: relative;
-    box-shadow: inset 0px 0px 0px 2px #ff00e5;
+  .containerButton {
+    background: $gradient90deg;
+    padding: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
 
-    &:before {
-      content: "";
-      position: absolute;
-      left: 0%;
-      right: 0%;
-      top: 57.38%;
-      bottom: 0%;
-      background: $gradient90deg;
-      filter: blur(50px);
-      z-index: -1;
-    }
-    &::after {
-      content: "";
-      position: absolute;
-      border-radius: 1px;
-      top: 0;
-      left: 0;
+    .button {
+      padding: 16px 48px;
+      font-weight: 900;
+      font-size: 18px;
+      line-height: 24px;
+      border-radius: 50px;
+      background: black;
+      color: #fff;
+      z-index: 1;
+      position: relative;
+      border: none;
+      cursor: pointer;
 
-      height: 100%;
-      width: 100%;
-      background: $gradient90deg;
-      z-index: -1;
-      opacity: 0;
+      &:hover {
+        background: $gradientPink;
+      }
 
-      transition: all 0.5s ease-out;
-    }
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0%;
+        right: 0%;
+        top: 72.38%;
+        bottom: 0%;
+        background: linear-gradient(98.01deg, #ff00e5 -1.14%, #7000ff 90.23%);
+        filter: blur(19px);
+        z-index: -1;
+      }
 
-    &:hover::after {
-      opacity: 100;
-
-      transition: all 0.5s ease-out;
+      &:hover {
+        background: transparent;
+      }
+      &:active {
+        &::after {
+          content: none;
+        }
+      }
     }
   }
 }
