--- a/src/components/Eco/Eco.module.scss
+++ b/src/components/Eco/Eco.module.scss
@@ -1,36 +1,53 @@
 @import "../../styles/mixins.scss";
 
-.card{
-    display: flex;
+.card {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
+
+  .textContainer {
+      max-width: 450px;
+      padding-right: 40px;
+    .topText {
+      font-size: 32px;
+      text-align: left;
+      @include gradientText90deg;
+      padding-bottom: 20px;
+    }
+
+    .textEco {
+      color: #fff;
+      text-align: left;
+      font-weight: bold;
+      font-size: 24px;
+      line-height: 30px;
+    }
+  }
+
+  .containerImg {
+    width: 760px;
+    overflow: hidden;
+    border-radius: 40px;
+    .ecoImg {
+      width: 100%;
+      transition: all 1s ease-out;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
 }
 
-.topEcoContainer{
-    display: flex;
-    .topEco{
-        color: #fff;
-        font-style: bold;
-        font-size: 60px;
-        line-height: 100%;
-        padding-top: 181px;
-        display: inline-block;
-        padding-bottom: 41px;
-    }
-    .textEco{
-        color: #fff;
-        font-size: 24px;
-        text-align: left;
-        font-weight: bold;
-        padding-right: 40px;
-    }
-}
-.topText{
-    font-size: 32px;
-    text-align: left;
-    @include gradientText90deg;
-    padding-bottom: 20px;
-}
-.ecoImg{
-    width: 776px;
-    padding-left: 40px;
-    padding-bottom: 40px;
+.topEcoContainer {
+  display: flex;
+  .topEco {
+    color: #fff;
+    font-style: bold;
+    font-size: 60px;
+    line-height: 100%;
+    padding-top: 181px;
+    display: inline-block;
+    padding-bottom: 41px;
+  }
 }
