--- a/src/components/LotModal/LotModal.module.scss
+++ b/src/components/LotModal/LotModal.module.scss
@@ -17,6 +17,7 @@
     position: absolute;
     top: 53px;
     right: 53px;
+    cursor: pointer;
   }
 
   .heading {
@@ -53,7 +54,7 @@
       position: absolute;
       left: 0;
       right: 0;
-      bottom: 0;
+      bottom: 1px;
       height: 1px;
 
       background: linear-gradient(
@@ -69,7 +70,7 @@
       position: absolute;
       left: 0;
       right: 0;
-      top: 0;
+      top: 1px;
       height: 1px;
 
       background: linear-gradient(
@@ -197,7 +198,7 @@
     }
     .containerClose {
       background: $gradient90deg;
-      padding: 2px 3px 3px 3px;
+      padding: 3px 3px 3px 3px;
       display: flex;
       justify-content: center;
       align-items: center;
