--- a/src/components/Team/Team.module.scss
+++ b/src/components/Team/Team.module.scss
@@ -1,46 +1,70 @@
 @import "../../styles/mixins.scss";
 
-.teamContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  .topTeam {
-    color: #fff;
-    font-style: bold;
-    font-size: 60px;
-    line-height: 100%;
-    padding-top: 169px;
-    display: inline-block;
-    margin-bottom: 40px;
-  }
-}
-.teamWrapper {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  justify-content: space-between;
-  .teamCardContainer {
-    width: 25%;
+.container {
+  max-width: 1500px;
+  .teamContainer {
     display: flex;
-    flex-direction: column;
-    padding: 40px;
+    justify-content: center;
     align-items: center;
-    box-sizing: border-box;
-    .fouder {
-      font-size: 32px;
-      @include gradientText90deg;
-      padding-bottom: 20px;
+    .topTeam {
+      color: #fff;
+      font-style: bold;
+      font-size: 60px;
+      line-height: 100%;
+      padding-top: 169px;
+      display: inline-block;
+      margin-bottom: 40px;
     }
-    .ava{
-        padding-bottom: 41px;
-    }
-    .name{
+  }
+  .teamWrapper {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-between;
+    .teamCardContainer {
+      width: 25%;
+      display: flex;
+      flex-direction: column;
+      padding: 40px;
+      align-items: center;
+      box-sizing: border-box;
+      .fouder {
+        font-size: 32px;
+        @include gradientText90deg;
         padding-bottom: 20px;
-    }
-    .socialsContainar{
-        .icon{
-            padding: 0 10px;
+      }
+      .avaContainer {
+        position: relative;
+        &:after {
+          content: "";
+          position: absolute;
+          left: 0;
+          right: 0;
+          bottom: 3px;
+          height: 1px;
+
+          background: linear-gradient(
+            92.19deg,
+            rgba(255, 0, 229, 0) 2.62%,
+            #ff00e5 38.55%,
+            #7000ff 59.71%,
+            rgba(112, 0, 255, 0) 97.11%
+          );
         }
+        .ava {
+          padding-bottom: 41px;
+        }
+      }
+
+      .name {
+        padding-bottom: 20px;
+      }
+      .socialsContainar {
+        .icon {
+          padding: 0 10px;
+          cursor: pointer;
+        }
+      }
     }
   }
 }
