--- a/src/components/Socials/Socials.module.scss
+++ b/src/components/Socials/Socials.module.scss
@@ -100,6 +100,7 @@
       }
       .rocketImg {
         top: 100px;
+        visibility: hidden !important;
       }
       .rocketPinkImg {
         visibility: visible !important;
