--- a/src/components/Team/Team.module.scss
+++ b/src/components/Team/Team.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/mixins.scss";
+@import "../../styles/variables.scss";
 
 .container {
   max-width: 1500px;
@@ -60,11 +61,54 @@
         padding-bottom: 20px;
       }
       .socialsContainar {
+        display: flex;
+        justify-content: center;
+       .iconContainer{
+         width: 32px;
+         height: 32px;
+         margin: 0 10px;
+         position: relative;
+         z-index: 1;
+         display: inline-block;
+         &:hover{
+           .icon{
+             visibility: hidden !important;
+           }
+           .iconHover{
+             visibility: visible !important;
+           }
+         }
+         &:active{
+          .iconPress{
+            visibility: visible !important;
+          }
+          .iconHover{
+            visibility: hidden !important;
+          }
+        }
         .icon {
-          padding: 0 10px;
+          position: absolute;
+          top: 0;
+          left: 0;
           cursor: pointer;
+          visibility: visible;
+        }
+        .iconHover{
+          position: absolute;
+          top: 0;
+          left: 0;
+          cursor: pointer;
+          visibility: hidden;
+        }
+        .iconPress{
+          position: absolute;
+          top: 0;
+          left: 0;
+          cursor: pointer;
+          visibility: hidden;
         }
       }
     }
   }
+}
 }
