--- a/src/components/Benefits/Benefits.module.scss
+++ b/src/components/Benefits/Benefits.module.scss
@@ -40,3 +40,21 @@
     }
   }
 }
+
+@media screen and (max-width: 1000px) {
+  .cardContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center !important;
+    .card{
+      display: flex;
+      flex-direction: column;
+      align-items: center !important;
+      .textBenefits{
+        text-align: center !important;
+        padding-right: 0px !important;
+      }
+    }
+    
+  }
+}
