--- a/src/components/Eco/Eco.module.scss
+++ b/src/components/Eco/Eco.module.scss
@@ -56,3 +56,36 @@
     }
   }
 }
+
+@media screen and (max-width: 1000px) {
+    .topEcoContainer{
+      display: flex;
+      justify-content: center;
+      .topEco{
+        text-align: center;
+        display: inline-block;
+      }
+    }
+  
+  .card{
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    max-width: 460px;
+    margin: 0 auto;
+    .textContainer{
+      padding-right: 0px !important;
+      .topText{
+        display: flex;
+        justify-content: center;
+      }
+      .textEco{
+        text-align: center !important;
+      }
+    }
+    .containerImg{
+      padding-bottom: 40px;
+    }
+  }
+
+}
