--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -77,4 +77,64 @@
       }
     }
   }
+
+  .burger {
+    display: none;
+  }
+
+  .cross {
+    display: none;
+  }
+
+  
+}
+@media screen and (max-width: 1350px) {
+  .link {
+    display: none;
+  }
+  .button {
+    display: none;
+  }
+  .burger {
+    cursor: pointer;
+    margin-left: auto; 
+    display: inline !important;
+  }
+  .responsive {
+    width: 100% !important;
+    height: 100vh !important;
+    display: flex !important;
+    flex-direction: column !important;
+    justify-content: space-between !important;
+    align-items: center !important;
+    position: relative !important;
+    padding: 90px 15px 50px 15px;
+    box-sizing: border-box;
+    top: 0;
+
+    .cross {
+      cursor: pointer;
+      display: inline;
+      position: absolute;
+      right: 16px;
+      top: 28px
+    }
+
+    .burger {
+      display: none !important;
+    }
+
+    .link {
+      display: initial;
+    }
+
+    .button {
+      display: initial;
+
+      .arrow {
+        display: none;
+      }
+    }
+
+  }
 }
