--- a/src/components/Story/Story.module.scss
+++ b/src/components/Story/Story.module.scss
@@ -82,7 +82,9 @@
     margin: 0 auto;
     }
     .textStory{
-      padding-bottom: 200px !important;
+      padding: 20px 0 200px 0 !important;
+      width: initial !important;
+      text-align: center !important;
     }
     .ship{
       height: 230px !important;
