--- a/src/components/Benefits/Benefits.module.scss
+++ b/src/components/Benefits/Benefits.module.scss
@@ -50,6 +50,7 @@
       display: flex;
       flex-direction: column;
       align-items: center !important;
+      width: initial !important;
       .textBenefits{
         text-align: center !important;
         padding-right: 0px !important;
