--- a/src/components/AuctionLot/AuctionLot.module.scss
+++ b/src/components/AuctionLot/AuctionLot.module.scss
@@ -106,4 +106,18 @@
       }
     }
   }
+  @media screen and (max-width: 1150px) {
+    flex-direction: column;
+    align-items: center;
+    .lotImage {
+      margin-bottom: 40px;
+    }
+    .lotInfo {
+      align-items: center;
+
+      .lotName {
+        text-align: center;
+      }
+    }
+  }
 }
