--- a/src/pages/Auction/Auction.module.scss
+++ b/src/pages/Auction/Auction.module.scss
@@ -14,4 +14,11 @@
     flex-wrap: wrap;
     justify-content: space-between;
   }
+
+  @media screen and (max-width: 1150px) {
+    .lots {
+      flex-direction: column;
+      align-items: center
+    }
+  }
 }
