--- a/src/pages/FAQ/FAQ.module.scss
+++ b/src/pages/FAQ/FAQ.module.scss
@@ -20,11 +20,18 @@
   }
 }
 
-@media screen and (max-width: 1500px){
+@media screen and (max-width: 1200px){
   .page{
     
     .heading{
-      text-align: center;
+      width: fit-content;
+      margin: 0 auto !important;
+      padding-bottom: 40px !important;
+    }
+    .question{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
   }
 }
