--- a/src/components/ConnectModal/ConnectModal.module.scss
+++ b/src/components/ConnectModal/ConnectModal.module.scss
@@ -12,8 +12,8 @@
 
   .cross {
     position: absolute;
-    top: 53px;
-    right: 53px;
+    top: 23px;
+    right: 16px;
     cursor: pointer;
   }
 
@@ -103,8 +103,31 @@
       }
     }
   }
+
+  @media screen and (max-width: 400px) {
+    .heading {
+      font-size: 32px;
+      line-height: 40px;
+    }
+
+    .actions {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+
+      .button {
+        width: 100%;
+      }
+    }
+  }
 }
 
 .paper {
   border-radius: 60px !important;
+  // max-width: calc(100%-32px) !important;
+  max-width: calc(100% - 32px) !important;
+  width: calc(100% - 32px) !important;
+  margin-left: 16px !important;
+  margin-right: 16px !important;
 }
