--- a/src/components/Fluensers/Fluensers.module.scss
+++ b/src/components/Fluensers/Fluensers.module.scss
@@ -3,7 +3,8 @@
   max-width: 1626px;
   position: relative;
   padding: 30px;
-
+  background: url(../../../public/images/smoke1.png);
+  background-size: contain;
   .topFluensersContainer {
     display: flex;
     justify-content: center;
