--- a/src/components/Team/Team.module.scss
+++ b/src/components/Team/Team.module.scss
@@ -3,6 +3,12 @@
 
 .container {
   max-width: 1500px;
+  .bg{
+    position: absolute;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+  }
   .teamContainer {
     display: flex;
     justify-content: center;
