--- a/src/components/Benefits/Benefits.module.scss
+++ b/src/components/Benefits/Benefits.module.scss
@@ -1,6 +1,16 @@
 @import "../../styles/mixins.scss";
 
 .benefits {
+  // background: url(../../../public/images/smoke2.png);
+  // background-position: 50% 50%;
+  // background-repeat: no-repeat;
+  // background-size: contain;
+  .bg{
+    position: absolute;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+  }
   .benefitsContainer {
     display: flex;
     justify-content: center;
@@ -20,12 +30,30 @@
 .cardContainer {
   display: flex;
   flex-wrap: wrap;
+
   .card {
+    position: relative;
     width: 50%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     margin-bottom: 81px;
+    &:after {
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: -28px;
+      height: 1px;
+      opacity: 0.3;
+      background: linear-gradient(
+        92.19deg,
+        rgba(255, 0, 229, 0) 2.62%,
+        #ff00e5 38.55%,
+        #7000ff 59.71%,
+        rgba(112, 0, 255, 0) 97.11%
+      );
+    }
     .textBenefits {
       color: #fff;
       font-size: 24px;
