--- a/src/pages/Auction/Auction.module.scss
+++ b/src/pages/Auction/Auction.module.scss
@@ -3,6 +3,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  .bg{
+    position: absolute;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+  }
   .heading {
     font-weight: 800;
     font-size: 60px;
