--- a/src/pages/FAQ/FAQ.module.scss
+++ b/src/pages/FAQ/FAQ.module.scss
@@ -3,6 +3,12 @@
 
 .page {
 
+  .bg{
+    position: absolute;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+  }
   .heading {
     font-weight: 800;
     font-size: 60px;
